<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="1">

    <TextView
        android:text="@string/nomeAvaliador"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nomeAvaliador"/>

    <EditText
        android:id="@+id/EditNomeAvaliador"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/nomeAvaliador"/>

    <TextView
        android:text="@string/tituloTrabalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditNomeAvaliador"
        android:id="@+id/tituloTrabalho"/>

    <EditText
        android:id="@+id/EditTituloTrabalho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/tituloTrabalho"/>

    <TextView
        android:text="@string/notaTrabalho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditTituloTrabalho"
        android:id="@+id/notaTrabalho"/>

    <EditText
        android:id="@+id/EditNotaTrabalho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/notaTrabalho"/>

    <TextView
        android:text="@string/comentarioTrabalho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditNotaTrabalho"
        android:id="@+id/comentarioTrabalho"/>

    <EditText
        android:id="@+id/EditComentarioTrabalho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/comentarioTrabalho"
        android:layout_weight="0.25" />

    <Button
        android:id="@+id/Avaliar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditComentarioTrabalho"
        android:layout_alignParentRight="true"
        android:text="@string/Avaliar" />

    <Button
        android:id="@+id/contarAvaliacoes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Avaliar"
        android:layout_alignParentRight="true"
        android:text="@string/contarAvaliacoes"/>

</LinearLayout>
